@@ -74,12 +74,8 @@ exit from the current process.
 It is useful for cleaning up when a process is finished using \fBTcl\fR but
 wishes to continue executing, and when \fBTcl\fR is used in a dynamically
 loaded extension that is about to be unloaded.
-On some systems \fBTcl\fR is automatically notified when it is being
-unloaded, and it calls \fBTcl_Finalize\fR internally; on these systems it
-not necessary for the caller to explicitly call \fBTcl_Finalize\fR.
-However, to ensure portability, your code should always invoke
-\fBTcl_Finalize\fR when \fBTcl\fR is being unloaded, to ensure that the
-code will work on all platforms. \fBTcl_Finalize\fR can be safely called
+Your code should always invoke \fBTcl_Finalize\fR when \fBTcl\fR is being
+unloaded, to ensure proper cleanup. \fBTcl_Finalize\fR can be safely called
 more than once.
 .PP
 \fBTcl_ExitThread\fR is used to terminate the current thread and invoke
